helloworld/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwapp
  template:
    metadata:
      labels:
        app: hwapp
    spec:
      containers:
        - name: hwapp
          image: kiran2223/hwapp:latest
          ports:
            - containerPort: 8001
