helloworld/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwapp-service
spec:
  selector:
    app: hwapp
  ports:
    - protocol: TCP
      port: 80   # External access port
      targetPort: 8001  # Internal container port
  type: NodePort   # Expose service on NodePort for external access in Minikube
